@@ -1,3 +1,9 @@
+20010517
+ - OpenBSD CVS Sync
+   - markus@cvs.openbsd.org 2001/05/12 19:53:13
+     [sftp-server.c]
+     readlink does not NULL-terminate; mhe@home.se
+
 20010512
  - OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2001/05/11 14:59:56
@@ -5402,4 +5408,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1218 2001/05/12 16:50:50 mouring Exp $
+$Id: ChangeLog,v 1.1219 2001/05/17 03:14:57 mouring Exp $
